--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<header id="header" class="inner">
 		<a href="/" class="profilepic">
 			
-			<img lazy-src="/img/avatar.png" class="js-avatar">
+			<img lazy-src="/img/lufeinamei.png" class="js-avatar">
 			
 		</a>
 
